--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
 }
+ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
 
 .App-logo {
   height: 40vmin;
@@ -15,7 +19,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
