--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
+/* .App {
   text-align: center;
 }
 ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-}
+} */
 
 .App-logo {
   height: 40vmin;
