--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,9 @@
-/* .App {
+.App {
   text-align: center;
 }
 ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-} */
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
